[package]
name = "wui"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a universial mobile-first UI for web assembly"
repository = "https://www.github.com/richardanaya/wui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_ffi = "0.0.13"
view = "0.1.3"